<resources>
    <string name="app_name">BOKIR</string>
    <string name="btn_link_login">Sudah Punya Akun</string>
    <string name="btn_sign_up">Daftar</string>
    <string name="hint_password">Password</string>
    <string name="register">REGISTER</string>
    <string name="not_register">Sudah Punya Akun</string>
    <string name="name">Nama</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="don_t_remember_password">Don\'t Remember password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="login_now">login now</string>
    <string name="email_address">email address</string>
    <string name="sign_in_google">Daftar Dengan Google</string>

    <string name="bokir_string">BOKIR</string>
    <string name="booking_parkir_string">Booking Parkir</string>
    <string name="booking_parkir_ek1_string">Cari Tempat</string>
    <string name="riwayat_string">Riwayat</string>
    <string name="scan_string">Scan</string>
    <string name="contact_string">Contact</string>
    <string name="settings_string">Settings</string>
    <string name="log_out_string">Log Out</string>

    <string name="notifications_string">Notifications</string>
    <string name="newsletter_string">Newsletter</string>
    <string name="your_preferences_ek1_string">Your Preferences</string>
    <string name="bokirapp_string">BokirApp</string>
    <string name="jl_nakula_sadewa_string">Jl.Nakula sadewa</string>
    <string name="____________string">**********</string>
    <string name="bokir_app_email_com_string">bokir.app@email.com</string>
    <string name="nama_lengkap_string">Nama Lengkap</string>
    <string name="address_string">Address</string>
    <string name="password_string">Password</string>
    <string name="email_string">Email</string>
    <string name="your_information_ek1_string">Your Information</string>
</resources>
