<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView android:id="@+id/your_information_ek1"
                android:fontFamily="Acumin Pro SemiCondensed"
                android:textSize="20sp"
                android:textColor="@color/your_preferences_ek1_color"
                android:layout_marginLeft="@dimen/item_margin"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_information_ek1_string"
                />

            <RelativeLayout android:id="@+id/Informasi_akun"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/your_information_ek1"
                android:layout_marginLeft="@dimen/item_margin"
                android:layout_marginRight="@dimen/item_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_shape_set"
                android:paddingLeft="@dimen/side_padding"
                android:paddingRight="@dimen/side_padding"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                >

                <TextView android:id="@+id/nama_lengkap"
                    android:fontFamily="Acumin Pro SemiCondensed"
                    android:textSize="16sp"
                    android:textColor="@color/notifications_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_lengkap_string"
                    />

                <TextView android:id="@+id/edit_nama"
                    android:fontFamily="Acumin Pro SemiCondensed"
                    android:alpha="0.76078431372549"
                    android:textSize="16sp"
                    android:textColor="@color/notifications_color"
                    android:layout_below="@+id/nama_lengkap"
                    android:layout_width="69dp"
                    android:layout_height="24dp"
                    android:text="@string/bokirapp_string"
                    />

                <ImageView android:id="@+id/path"
                    android:src="@drawable/icon_edit"
                    android:contentDescription="path"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/nama_lengkap"
                    android:layout_marginTop="-5dp"
                    android:layout_width="21dp"
                    android:layout_height="21dp" />

                <TextView android:id="@+id/address"
                    android:fontFamily="Acumin Pro SemiCondensed"
                    android:textSize="16sp"
                    android:textColor="@color/notifications_color"
                    android:layout_below="@+id/edit_nama"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_string"
                    />

                <TextView android:id="@+id/edit_alamat"
                    android:fontFamily="Acumin Pro SemiCondensed"
                    android:alpha="0.76078431372549"
                    android:textSize="16sp"
                    android:textColor="@color/notifications_color"
                    android:layout_below="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jl_nakula_sadewa_string"
                    />

                <ImageView android:id="@+id/btn_alamat"
                    android:src="@drawable/icon_edit"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/address"
                    android:layout_marginTop="-5dp"
                    android:layout_width="21dp"
                    android:layout_height="21dp" />

                <TextView android:id="@+id/email"
                    android:fontFamily="Acumin Pro SemiCondensed"
                    android:textSize="16sp"
                    android:textColor="@color/notifications_color"
                    android:layout_below="@+id/edit_alamat"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_string"
                    />

                <TextView android:id="@+id/edit_email"
                    android:fontFamily="Acumin Pro SemiCondensed"
                    android:alpha="0.76078431372549"
                    android:textSize="16sp"
                    android:textColor="@color/notifications_color"
                    android:layout_below="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bokir_app_email_com_string"
                    />

                <ImageView android:id="@+id/btn_email"
                    android:src="@drawable/icon_edit"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/email"
                    android:layout_marginTop="-5dp"
                    android:layout_width="21dp"
                    android:layout_height="21dp" />

                <TextView android:id="@+id/password"
                    android:fontFamily="Acumin Pro SemiCondensed"
                    android:textSize="16sp"
                    android:textColor="@color/notifications_color"
                    android:layout_below="@+id/edit_email"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_string"
                    />

                <TextView android:id="@+id/edit_password"
                    android:fontFamily="Acumin Pro SemiCondensed"
                    android:alpha="0.76078431372549"
                    android:textSize="16sp"
                    android:textColor="@color/notifications_color"
                    android:layout_below="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editpassword"
                    />

                <ImageView android:id="@+id/btn_password"
                    android:src="@drawable/icon_edit"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/password"
                    android:layout_marginTop="-5dp"
                    android:layout_width="21dp"
                    android:layout_height="21dp" />

            </RelativeLayout>

            <TextView android:id="@+id/your_preferences_ek1"
                android:fontFamily="Acumin Pro SemiCondensed"
                android:textSize="20sp"
                android:textColor="@color/your_preferences_ek1_color"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="@dimen/item_margin"
                android:layout_below="@+id/Informasi_akun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_preferences_ek1_string"
                />

            <RelativeLayout android:id="@+id/your_preferences"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_below="@+id/your_preferences_ek1"
                android:layout_marginLeft="@dimen/item_margin"
                android:layout_marginRight="@dimen/item_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_shape_set"
                android:paddingLeft="@dimen/side_padding"
                android:paddingRight="@dimen/side_padding"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                >

                <TextView android:id="@+id/notifications"
                    android:fontFamily="Acumin Pro SemiCondensed"
                    android:textSize="16sp"
                    android:textColor="@color/notifications_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications_string"
                    />

                <TextView android:id="@+id/newsletter"
                    android:fontFamily="Acumin Pro SemiCondensed"
                    android:textSize="16sp"
                    android:textColor="@color/notifications_color"
                    android:layout_below="@+id/notifications"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newsletter_string"
                    />

                <ImageView android:id="@+id/switch_notif"
                    android:src="@drawable/switch_on"
                    android:layout_alignParentRight="true"
                    android:layout_width="36dp"
                    android:layout_height="24dp" />

                <ImageView android:id="@+id/switch_news"
                    android:src="@drawable/switch_off"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/notifications"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="36dp"
                    android:layout_height="24dp" />

            </RelativeLayout>

        </RelativeLayout>
</ScrollView>