<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <View android:id="@+id/rectangle_1"
                android:background="@drawable/rectangle_1_shape"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <ImageView android:id="@+id/user"
                android:src="@drawable/user"
                android:contentDescription="user"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="31dp"
                android:layout_marginRight="30dp"
                android:layout_width="34dp"
                android:layout_height="34dp" />


            <RelativeLayout android:id="@+id/group_1"
                android:layout_marginTop="31dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView android:id="@+id/bokir"
                    android:fontFamily="Helvetica Neue"
                    android:textSize="24sp"
                    android:textColor="@color/bokir_color"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bokir_string"
                    />

                <TextView android:id="@+id/booking_parkir"
                    android:fontFamily="Helvetica Neue"
                    android:textSize="18sp"
                    android:textColor="@color/bokir_color"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="28dp"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/booking_parkir_string"
                    />

            </RelativeLayout>

            <RelativeLayout android:id="@+id/item"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/group_1"
                android:layout_marginLeft="@dimen/item_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:clickable="true"
                >

                <View android:id="@+id/rectangle_2"
                    android:background="@drawable/rectangle_2_ek1_shape"
                    android:layout_width="150dp"
                    android:layout_height="184dp" />

                <TextView android:id="@+id/booking_parkir_ek1"
                    android:fontFamily="Helvetica Neue"
                    android:layout_gravity="center_horizontal|center"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/booking_parkir_ek1_color"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="137dp"
                    android:layout_width="109dp"
                    android:layout_height="20dp"
                    android:text="@string/booking_parkir_ek1_string"
                    />

                <ImageView android:id="@+id/p"
                    android:src="@drawable/p"
                    android:contentDescription="p"
                    android:layout_marginLeft="29dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="24dp"
                    android:layout_width="92dp"
                    android:layout_height="90dp" />

            </RelativeLayout>

            <RelativeLayout android:id="@+id/item_ek1"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/group_1"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/item_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                >

                <View android:id="@+id/rectangle_2_ek1"
                    android:background="@drawable/rectangle_2_ek1_shape"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="150dp"
                    android:layout_height="184dp" />

                <TextView android:id="@+id/riwayat"
                    android:fontFamily="Helvetica Neue"
                    android:layout_gravity="center_horizontal|center"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/booking_parkir_ek1_color"
                    android:layout_marginLeft="44dp"
                    android:layout_marginTop="137dp"
                    android:layout_width="61dp"
                    android:layout_height="20dp"
                    android:text="@string/riwayat_string"
                    />

                <ImageView android:id="@+id/parchment"
                    android:src="@drawable/parchment"
                    android:contentDescription="parchment"
                    android:layout_marginLeft="29dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="27dp"
                    android:layout_width="92dp"
                    android:layout_height="92dp" />

            </RelativeLayout>


            <RelativeLayout android:id="@+id/item_ek2"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/item"
                android:layout_marginLeft="@dimen/item_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                >

                <View android:id="@+id/rectangle_2_ek2"
                    android:background="@drawable/rectangle_2_ek1_shape"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="150dp"
                    android:layout_height="184dp" />

                <TextView
                    android:id="@+id/reward"
                    android:layout_width="51dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="137dp"
                    android:fontFamily="Helvetica Neue"
                    android:gravity="center"
                    android:text="Hadiah"
                    android:textColor="@color/booking_parkir_ek1_color"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/ic_reward"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_marginStart="31dp"
                    android:layout_marginLeft="31dp"
                    android:layout_marginTop="35dp"
                    android:contentDescription="ic_reward"
                    android:src="@drawable/icon_reward"
                    app:srcCompat="@drawable/icon_reward"
                    tools:srcCompat="@drawable/icon_reward" />

            </RelativeLayout>


            <RelativeLayout android:id="@+id/item_ek3"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/item"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/item_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                >

                <View android:id="@+id/rectangle_2_ek3"
                    android:background="@drawable/rectangle_2_ek1_shape"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="150dp"
                    android:layout_height="184dp" />

                <TextView android:id="@+id/contact"
                    android:fontFamily="Helvetica Neue"
                    android:layout_gravity="center_horizontal|center"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/booking_parkir_ek1_color"
                    android:layout_marginLeft="44dp"
                    android:layout_marginTop="137dp"
                    android:layout_width="61dp"
                    android:layout_height="20dp"
                    android:text="@string/contact_string"
                    />

                <ImageView android:id="@+id/contact_ek1"
                    android:src="@drawable/contact_ek1"
                    android:contentDescription="contact_ek1"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="30dp"
                    android:layout_width="86dp"
                    android:layout_height="86dp" />

            </RelativeLayout>


            <RelativeLayout android:id="@+id/item_ek4"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/item_ek2"
                android:layout_marginLeft="@dimen/item_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                >

                <View android:id="@+id/rectangle_2_ek4"
                    android:background="@drawable/rectangle_2_ek1_shape"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="150dp"
                    android:layout_height="184dp" />

                <TextView android:id="@+id/settings"
                    android:fontFamily="Helvetica Neue"
                    android:layout_gravity="center_horizontal|center"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/booking_parkir_ek1_color"
                    android:layout_marginLeft="43dp"
                    android:layout_marginTop="137dp"
                    android:layout_width="63dp"
                    android:layout_height="20dp"
                    android:text="@string/settings_string"
                    />

                <ImageView android:id="@+id/settings_gears"
                    android:src="@drawable/settings_gears"
                    android:contentDescription="settings_gears"
                    android:layout_marginLeft="31dp"
                    android:layout_marginStart="31dp"
                    android:layout_marginTop="27dp"
                    android:layout_width="88dp"
                    android:layout_height="88dp" />

            </RelativeLayout>


            <RelativeLayout android:id="@+id/item_ek5"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/item_ek2"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/item_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                >

                <View android:id="@+id/rectangle_2_ek5"
                    android:background="@drawable/rectangle_2_ek1_shape"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="150dp"
                    android:layout_height="184dp" />

                <TextView android:id="@+id/log_out"
                    android:fontFamily="Helvetica Neue"
                    android:layout_gravity="center_horizontal|center"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/booking_parkir_ek1_color"
                    android:layout_marginLeft="44dp"
                    android:layout_marginTop="137dp"
                    android:layout_width="61dp"
                    android:layout_height="20dp"
                    android:text="@string/log_out_string"
                    />

                <ImageView android:id="@+id/logout"
                    android:src="@drawable/logout"
                    android:contentDescription="logout"
                    android:layout_marginLeft="31dp"
                    android:layout_marginStart="31dp"
                    android:layout_marginTop="28dp"
                    android:layout_width="88dp"
                    android:layout_height="88dp" />

            </RelativeLayout>

        </RelativeLayout>

    <ImageView
        android:id="@+id/circle2"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:elevation="-1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-100dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/circletransparant" />

    <ImageView
        android:id="@+id/circle3"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="-80dp"
        android:layout_marginBottom="-30dp"
        android:src="@drawable/circle"
        android:elevation="-1dp"/>

    <ImageView
        android:id="@+id/circle4"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_alignParentBottom="true"
        android:elevation="-2dp"
        android:layout_marginRight="-50dp"
        android:layout_marginBottom="-50dp"
        android:layout_toLeftOf="@+id/circle3"
        android:src="@drawable/circletransparant" />

</RelativeLayout>